styles/codeberg/catppuccin.user.less
/* ==UserStyle==
@name Codeberg Catppuccin
@namespace github.com/catppuccin/userstyles/styles/codeberg
@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/codeberg
@version 2025.09.06
@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/codeberg/catppuccin.user.less
@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Acodeberg
@description Soothing pastel theme for Codeberg
@author Catppuccin
@license MIT

@preprocessor less
@var select lightFlavor "Light Flavor" ["latte:Latte*", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
@var select darkFlavor "Dark Flavor" ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha*"]
@var select accentColor "Accent" ["rosewater:Rosewater", "flamingo:Flamingo", "pink:Pink", "mauve:Mauve*", "red:Red", "maroon:Maroon", "peach:Peach", "yellow:Yellow", "green:Green", "teal:Teal", "blue:Blue", "sapphire:Sapphire", "sky:Sky", "lavender:Lavender", "subtext0:Gray"]
==/UserStyle== */

@import "https://userstyles.catppuccin.com/lib/lib.less";

@-moz-document domain("codeberg.org") {
  @import (css)
    url("https://catppuccin.github.io/gitea/theme-catppuccin-@{lightFlavor}-@{accentColor}.css")
    (prefers-color-scheme: light);
  @import (css)
    url("https://catppuccin.github.io/gitea/theme-catppuccin-@{darkFlavor}-@{accentColor}.css")
    (prefers-color-scheme: dark);
}

@-moz-document domain("codeberg.org") {
  [data-theme="codeberg-dark"],
  [data-theme="codeberg-light"],
  [data-theme="codeberg-auto"] {
    @media (prefers-color-scheme: light) {
      #catppuccin(@lightFlavor);
    }
    @media (prefers-color-scheme: dark) {
      #catppuccin(@darkFlavor);
    }
  }

  #catppuccin(@flavor) {
    #lib.palette();
    // #lib.defaults(); // Not needed, themed in upstream Gitea port.

    --color-body: @base;
    --color-nav-text: @crust;
    --color-nav-hover-bg: darken(@accent, 5%);
    --color-secondary-nav-bg: @surface0;
    --color-link: @blue;
    --color-footer-text: @text;

    .ui.secondary.menu .dropdown.item:hover,
    .ui.secondary.menu a.item:hover,
    .ui.secondary.menu a.active.item:hover {
      background-color: var(--color-nav-hover-bg);
      color: var(--color-black);
    }

    .ui.basic.red.buttons .button,
    .ui.basic.red.button {
      &:hover,
      &:focus {
        background-color: @red;
        border-color: var(--color-light-border);
        color: @crust;
      }
    }

    #codeberg-logo(@color) {
      @svg: escape(
        '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><defs><linearGradient id="b" x1="42519.285" x2="42575.336" y1="-7078.7891" y2="-6966.9312" gradientUnits="userSpaceOnUse" href="#a"/><linearGradient id="a"><stop color="@{color}" offset="0" stop-opacity="0"/><stop offset=".495" stop-color="@{color}" stop-opacity=".3"/><stop offset="1" stop-color="@{color}" stop-opacity=".3"/></linearGradient></defs><path fill="url(#b)" d="M42519.285-7078.79a.76.568 0 0 0-.738.675l33.586 125.888a87.2 87.2 0 0 0 39.381-33.763l-71.565-92.52a.76.568 0 0 0-.664-.28" transform="translate(-5840.572 980.524)scale(.13766)"/><path fill="@{color}" d="M12.003.525A12.003 12.003 0 0 0 0 12.533 11.9 11.9 0 0 0 1.826 18.9L11.838 5.956c.068-.09.25-.09.324 0l10.007 12.939A11.9 11.9 0 0 0 24 12.522 12.003 12.003 0 0 0 12.003.525"/></svg>'
      );
      content: url("data:image/svg+xml,@{svg}");
    }

    #navbar-logo img {
      #codeberg-logo(@crust);
    }
    .branding img {
      #codeberg-logo(@text);
    }

    footer {
      .button:hover {
        background-color: @accent;
        color: @crust;
      }

      a:hover {
        color: @blue !important;
      }
    }
  }
}

